# kris-kringle

./: .gitignore  README.md  kris-kringle.cabal
src/: Main.hs  Permutations.hs
