name:                kris-kringle
version:             0.1.0.0
synopsis:            Random pairings for Kris Kringle, a.k.a. Secret Santa.
description:         Please see README.md
homepage:            https://github.com/l-d-s/kris-kringle#readme
license:             BSD3
license-file:        LICENSE
author:              Leon Di Stefano
maintainer:          leondistefano@gmail.com
copyright:           2016 Leon Di Stefano
build-type:          Simple
cabal-version:       >=1.10

executable kris-kringle
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       ansi-terminal,
                       random
